--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
           -ms-overflow-style: none;
           scrollbar-width: none;
       }
+      /* Custom Scrollbar for Character Card */
+      .scrollbar-custom::-webkit-scrollbar {
+          width: 6px;
+      }
+      .scrollbar-custom::-webkit-scrollbar-track {
+          background: rgba(51, 65, 85, 0.3);
+          border-radius: 3px;
+      }
+      .scrollbar-custom::-webkit-scrollbar-thumb {
+          background: linear-gradient(to bottom, #ec4899, #8b5cf6);
+          border-radius: 3px;
+      }
+      .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+          background: linear-gradient(to bottom, #f472b6, #a78bfa);
+      }
+      .scrollbar-custom {
+          scrollbar-width: thin;
+          scrollbar-color: #8b5cf6 rgba(51, 65, 85, 0.3);
+      }
       /* Custom Animations */
       @keyframes float {
         0% { transform: translateY(0px); }
